--- a/blocks/acf-field/acf-field.css
+++ b/blocks/acf-field/acf-field.css
@@ -1,13 +1,13 @@
 /**
  * @package: acf-field
- * CSS for the acf-field block
+ * CSS for the acf-field block  aka wp-block-oik-testimonials-acf-field
  */
 
-.acf-field.gallery ul {
+.acf-field-gallery ul {
     list-style:none;
 }
 
-.acf-field.gallery ul {
+.acf-field-gallery ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -16,7 +16,7 @@
 
 }
 
-.acf-field.gallery ul > li {
+.acf-field-gallery ul > li {
     flex-basis: 33%;
     position: relative;
     cursor: pointer;
@@ -29,7 +29,7 @@
 */
 
 
-.acf-field.gallery li img {
+.acf-field-gallery li img {
     object-fit: cover;
     max-width: 100%;
     height: auto;
